--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@chakra-ui/react": "^1.7.5",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/berkshire-swash": "^4.5.0",
-    "@fontsource/noto-sans": "^4.5.1",
+    "@fontsource/prompt": "^4.5.8",
+    "@fontsource/rubik": "^4.5.9",
     "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
